--- a/index.html
+++ b/index.html
@@ -3,22 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
   <title>Frontend Mentor | 3-column preview card component</title>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+
+
 </head>
 <body>
   <div class="content">
-    <div class="card 1">
+    <div id="card" class="sedan">
       <div class="icon 1">
         <img src="./images/icon-sedans.svg" alt="sedans">
       </div>
-        <h1>Sedans</h1>
+        <h1>SEDANS</h1>
         <p>
         Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
         or on your next road trip.
@@ -26,7 +30,7 @@
       <button type="button" name="button">Learn more</button>
     </div>
 
-    <div class="card 2">
+    <div id="card"class="suv">
       <div class="icon 2">
         <img src="./images/icon-suvs.svg" alt="sedans">
       </div>
@@ -38,11 +42,11 @@
       <button type="button" name="button">Learn more</button>
     </div>
 
-    <div class="card 3">
+    <div id="card"class="luxury">
       <div class="icon 3">
         <img src="./images/icon-luxury.svg" alt="sedans">
       </div>
-        <h1>Luxury</h1>
+        <h1>LUXURY</h1>
         <p>
           Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
           rental and arrive in style.
@@ -52,10 +56,7 @@
   </div>
 
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+
 </body>
 </html>
 
@@ -69,4 +70,9 @@ and off-road adventures.
 
 Luxury
 Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
-rental and arrive in style.-->
+rental and arrive in style.
+
+<div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+  Coded by <a href="#">Your Name Here</a>.
+</div>-->
